--- a/vignettes/blockRAR.Rmd
+++ b/vignettes/blockRAR.Rmd
@@ -65,10 +65,12 @@ Example of time trend issue in response-adaptive randomization (RAR) design:
 - Patients within centers can change, especially but not only with chronic diseases, due to the phenomenon of “A queue of desperate patients lining up at the door”.
 - In addition to these examples, an investigator who wants to game the system could cross his/her fingers that his favored treatment arm is ahead, then progressively enroll better prognosis patients over time
 
+Therefore, we designed a stratified group-sequential method on altering the randomization ratio in a block/group level to address this issue instead of altering the randomization ratio by patient basis.
+In each block/group, the randomization ratio is kept constant.
+However, the ideal number of block/group is still vague.  
 
 
-
-`blockRAR` is an R package for the simulation and analysis of adaptive Bayesian randomzied controlled trials under a range of trial designs and outcome types. Currently, it supports binomial data types, with time-to-event data and Gaussian data type to follow soon. The package allows the (optional) incorporation of historical data and permits interim analyses of early stopping for futility or success. Please note this package is still under development. 
+`blockRAR` is an R package for the simulation and analysis of adaptive Bayesian randomzied controlled trials under a range of trial designs and outcome types. Currently, it supports binomial data types, with time-to-event data and Gaussian data type to follow soon. The package allows the (optional) incorporation of historical data and permits interim analyses of early stopping for futility or success.
 
 If you use `blockRAR` in published research, please cite: **TBA**.
 
@@ -105,4 +107,50 @@ After successful installation, the package must be loaded into the working space
 library(blockRAR)
 ```
 
+# Required input
+
+
+## Frequentist Approach
+
+**Data**:  Input to LPWC is a matrix or data frame.
+We assume here that it is gene expression data, but other data types are suitable as well.
+The expression matrix should be n -by- p where n is the number of genes (in rows) and p is the number of timepoints.
+If **data** is a data frame, the gene names can be specified using the `row.names()`.
+
+The object **simdata** is a simulated dataset for 200 genes with 8 timepoints that follow the biological [impulse model](https://doi.org/10.1093/bioinformatics/btw665).
+This is stored as a data frame in the package with row names representing gene labels.
+
+
+
+
+**Timepoints:** The object **timepoints** should be a vector of timepoints that specify when the data were collected.
+This should match the column length in **Data**.
+This can be in any form (seconds, minutes, hours, or even days), but make sure the units are uniform throughout.
+
+
+
+**Data** and **Timepoints** are the main requirement to run LPWC, however, there are other optional parameters that affect the results.
+Our manuscript referenced above describes these parameters in more detail.
+
+**Max.lag:** The object **max.lag** should be an integer value that controls the maximum lag.
+This max.lag has to be less than the floor of length(timepoints) / 4.
+That is because longer lags lead to comparisons between two expression profiles that use less than half of the data points, which can lead to spurious correlations.
+
+**C:** The object **C** should be a numeric.
+This controls the width of the Gaussian kernel function used to penalize the lag and the weights in weighed correlation vector.
+The parameter **C** can be set automatically by setting **C** to the default NULL value and setting the **penalty** argument described below.
+If **C** is set to a specific value, the **penalty** is ignored.
+
+**penalty:** The object **penalty** only allows two values: "low" and "high".
+It is used to automatically set the value of **C**.
+High imposes a higher penalty on lags thus favoring grouping genes without introducing lags.
+The lower penalty leads to more lagged genes in the clusters.
+The default is set to the "high" penalty.
+This argument is ignored if **C** is set to a specific value.
+
+**iter:** The object **iter** should be a numeric.
+This controls the number of values of C that are tested when automatically setting the C parameter.
+The default is 10.
+Increasing iter increases computational time.
+This is only relevant for the low penalty because the high penalty uses a single C instead of searching over multiple C.
 
