--- a/vignettes/blockRAR.Rmd
+++ b/vignettes/blockRAR.Rmd
@@ -70,9 +70,11 @@ In each block/group, the randomization ratio is kept constant.
 However, the ideal number of block/group is still vague.  
 
 
-`blockRAR` is an R package for the simulation and analysis of adaptive Bayesian randomzied controlled trials under a range of trial designs and outcome types. Currently, it supports binomial data types, with time-to-event data and Gaussian data type to follow soon. The package allows the (optional) incorporation of historical data and permits interim analyses of early stopping for futility or success.
+`blockRAR` is an R package for the simulation of response-adaptive randomization trials with binomial outcomes where patients are assigned in block and randomization ratio is altered by block rather than patient by patient basis using both frequentist and Bayesian method. For more details on the method, please look at our [preprint](https://arxiv.org/abs/1904.07758).
 
-If you use `blockRAR` in published research, please cite: **TBA**.
+If you use `blockRAR` in published research, please cite our preprint:
+
+Robust Response-Adaptive Randomization Design. Chandereng, T., & Chappell, R. (2019). [arXiv preprint arXiv:1904.07758](https://arxiv.org/abs/1904.07758).
 
 If after reading through this vignette you have questions or problems using `blockRAR`, please post them to https://github.com/thevaachandereng/blockRAR/issues. This will notify the package maintainers and we can work to address the issue(s). Please note that comments and questions should **not** be emailed directly to the package authors.
 
@@ -89,9 +91,7 @@ There are additional ways to download `blockRAR`. The first option is most usefu
 
 ```{r, eval = FALSE, echo=TRUE}
 devtools::install_github("thevaachandereng/blockRAR@vx.xx.x")
-
 # or 
-
 devtools::install_version("blockRAR", version = "x.x.x", repos = "http://cran.us.r-project.org")
 ```
 
@@ -109,48 +109,17 @@ library(blockRAR)
 
 # Required input
 
-
 ## Frequentist Approach
 
-**Data**:  Input to LPWC is a matrix or data frame.
-We assume here that it is gene expression data, but other data types are suitable as well.
-The expression matrix should be n -by- p where n is the number of genes (in rows) and p is the number of timepoints.
-If **data** is a data frame, the gene names can be specified using the `row.names()`.
 
-The object **simdata** is a simulated dataset for 200 genes with 8 timepoints that follow the biological [impulse model](https://doi.org/10.1093/bioinformatics/btw665).
-This is stored as a data frame in the package with row names representing gene labels.
+**p_control**:  The object **p_control** has to be $0 <$ **p_control** $< 1$. 
+This determine the proportion of events in the control group. 
 
+**p_treatment**:  The object **p_treatment** has to be $0 <$ **p_treatment** $< 1$. 
+This determine the proportion of events in the treatment group. 
 
-
-
-**Timepoints:** The object **timepoints** should be a vector of timepoints that specify when the data were collected.
-This should match the column length in **Data**.
-This can be in any form (seconds, minutes, hours, or even days), but make sure the units are uniform throughout.
+**N_total**: The object **N_total** determines the targeted sample size of subjects enrolled in the trial. 
+When early stopping criteria is specified, the total sample size enrolled in the trial might be smaller than the one used.  
 
 
-
-**Data** and **Timepoints** are the main requirement to run LPWC, however, there are other optional parameters that affect the results.
-Our manuscript referenced above describes these parameters in more detail.
-
-**Max.lag:** The object **max.lag** should be an integer value that controls the maximum lag.
-This max.lag has to be less than the floor of length(timepoints) / 4.
-That is because longer lags lead to comparisons between two expression profiles that use less than half of the data points, which can lead to spurious correlations.
-
-**C:** The object **C** should be a numeric.
-This controls the width of the Gaussian kernel function used to penalize the lag and the weights in weighed correlation vector.
-The parameter **C** can be set automatically by setting **C** to the default NULL value and setting the **penalty** argument described below.
-If **C** is set to a specific value, the **penalty** is ignored.
-
-**penalty:** The object **penalty** only allows two values: "low" and "high".
-It is used to automatically set the value of **C**.
-High imposes a higher penalty on lags thus favoring grouping genes without introducing lags.
-The lower penalty leads to more lagged genes in the clusters.
-The default is set to the "high" penalty.
-This argument is ignored if **C** is set to a specific value.
-
-**iter:** The object **iter** should be a numeric.
-This controls the number of values of C that are tested when automatically setting the C parameter.
-The default is 10.
-Increasing iter increases computational time.
-This is only relevant for the low penalty because the high penalty uses a single C instead of searching over multiple C.
 
