--- a/vignettes/blockRAR.Rmd
+++ b/vignettes/blockRAR.Rmd
@@ -34,6 +34,7 @@ Besides skewed randomization ratio, time trend can be a confounding factor as il
 
 ```{r, echo = FALSE, fig=TRUE, fig.width = 6, fig.height = 6}
 library(ggplot2)
+suppressWarnings(RNGversion("3.5.0"))
 set.seed(20999)
 
 
